hotfix/amc-006 Join searching mthds into one on FE demand.